# docs/swagger.json
@@ -5,7 +5,7 @@
         "version": "1.0.0",
         "title": "playtimetracker.app",
         "contact": {
-            "email": "hello@sy.hr"
+            "email": "mail@rhysbi.shop"
         }
     },
     "host": "api.playtimetracker.app",
@@ -18,6 +18,10 @@
                 "description": "Find out more",
                 "url": "https://playtimetracker.app/"
             }
+        },
+        {
+            "name": "steam",
+            "description": "Retrieve recent playtime for a user"
         }
     ],
     "schemes": [
@@ -77,6 +81,59 @@
                     "github"
                 ],
                 "summary": "Retrieve count of GitHub events of a certain type produced by a user",
+                "description": "",
+                "operationId": "",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "username",
+                        "in": "path",
+                        "description": "The user to retrieve the events of ",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "duration",
+                        "in": "path",
+                        "description": "The period in seconds to retrieve events from ",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "type",
+                        "in": "path",
+                        "description": "The type of event to retrieve ",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/GitHubType"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid username or duration"
+                    }
+                }
+            }
+        },
+        "/steam/{id}": {
+            "get": {
+                "tags": [
+                    "steam"
+                ],
+                "summary": "Retrieve recent playtime ",
                 "description": "",
                 "operationId": "",
                 "consumes": [
